--- a/index.html
+++ b/index.html
@@ -106,6 +106,33 @@
                </div>
             </div>
          </div>
+            <div class="container pt-5 pb-md-5">
+               <div class="winners p-4 p-md-5 rounded-4 text-center">
+               <div class="heading mb-4 mb-md-5">
+                  <h2 class="mb-0 display-4">WINNERS</h2>
+               </div>
+               <div class="row justify-content-center">
+                  <div class="col-4 col-md-2 mb-4 mb-md-0">
+                     <img src="images/ticket.svg" class="img-fluid">
+                  </div>
+                  <div class="col-4 col-md-2 mb-4 mb-md-0">
+                     <img src="images/ticket.svg" class="img-fluid">
+                  </div>
+                  <div class="col-4 col-md-2 mb-4 mb-md-0">
+                     <img src="images/ticket.svg" class="img-fluid">
+                  </div>
+                  <div class="col-4 col-md-2 mb-4 mb-md-0">
+                     <img src="images/ticket.svg" class="img-fluid">
+                  </div>
+                  <div class="col-4 col-md-2 mb-4 mb-md-0">
+                     <img src="images/ticket.svg" class="img-fluid">
+                  </div>
+                  <div class="col-4 col-md-2 mb-4 mb-md-0">
+                     <img src="images/ticket.svg" class="img-fluid">
+                  </div>
+               </div>
+            </div>
+            </div>
          <div class="container pt-5">
             <div class="row mb-3">
                <div class="col-md-12">
@@ -192,6 +219,7 @@
             </div>
          </div>
       </section>
+
       <footer class="py-4 border-top border-2 border-warning">
          <div class="container">
             <div class="row align-items-center justify-content-md-between">
