--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                <a href="#" class="logo d-flex align-items-center text-decoration-none">
                   <img src="images/logo.svg" class="me-2"> 
-                  <h3 class="mb-0"><span class="text-white fw-bold">SONIC</span> <span class="fst-italic text-warning">Jackpot</span></h3>
+                  <h4 class="mb-0"><span class="text-white fw-bold">SONIC</span> <span class="fst-italic text-warning">Jackpot</span></h4>
                </a>
                <div class="text-end ms-auto">
                   <button type="button" class="btn btn-warning rounded-pill">Participate</button>
@@ -36,12 +36,12 @@
                      <h2 class="mb-0">WIN</h2>
                   </div>
                </div>
-               <div class="col-md-6">
+               <div class="col-10 col-md-6">
                   <div class="banner-character mb-3 mb-md-0">
                      <img src="images/banner-character.svg" class="img-fluid">
                   </div>
                </div>
-               <div class="col-8 col-md-3">
+               <div class="col-6 col-md-3">
                   <div class="banner-ticket">
                      <img src="images/banner-ticket.svg" class="img-fluid">
                   </div>
@@ -56,14 +56,13 @@
       </div>
       <!-- TIMER -->
       <section id="content">
-         <div class="container pb-4 pb-md-5">
+         <div class="container pb-3 pb-md-4">
             <div class="row justify-content-center">
                <div class="col-md-8">
-                  <div class="presale p-4 p-md-5 rounded-4 text-center">
-                     <div class="heading mb-4 mb-md-5">
-                        <h2 class="mb-0 display-4">PRESALE</h2>
+                  <div class="presale p-3 p-md-4 rounded-4 text-center">
+                     <div class="heading mb-3 mb-md-4">
+                        <h3 class="mb-0">Time Left for Presale to Close</h3>
                      </div>
-                     <h5 class="text-white mb-4">Time left for Presale to close</h5>
                      <div class="timeContainer mb-4">
                         <div class="wrapper">
                            <div class="days">
@@ -101,50 +100,53 @@
                            </div>
                         </div>
                      </div>
-                     <a href="#" class="btn btn-warning rounded-pill px-4 py-3">Participate Now</a>
+                     <a href="#" class="btn btn-warning rounded-pill px-4">Participate Now</a>
                   </div>
                </div>
             </div>
          </div>
-            <div class="container pt-5 pb-md-5">
-               <div class="winners p-4 p-md-5 rounded-4 text-center">
-               <div class="heading mb-4 mb-md-5">
-                  <h2 class="mb-0 display-4">WINNERS</h2>
-               </div>
+            <div class="container pt-4 pb-md-5">
                <div class="row justify-content-center">
-                  <div class="col-4 col-md-2 mb-4 mb-md-0">
-                     <img src="images/ticket.svg" class="img-fluid">
-                  </div>
-                  <div class="col-4 col-md-2 mb-4 mb-md-0">
-                     <img src="images/ticket.svg" class="img-fluid">
-                  </div>
-                  <div class="col-4 col-md-2 mb-4 mb-md-0">
-                     <img src="images/ticket.svg" class="img-fluid">
-                  </div>
-                  <div class="col-4 col-md-2 mb-4 mb-md-0">
-                     <img src="images/ticket.svg" class="img-fluid">
-                  </div>
-                  <div class="col-4 col-md-2 mb-4 mb-md-0">
-                     <img src="images/ticket.svg" class="img-fluid">
-                  </div>
-                  <div class="col-4 col-md-2 mb-4 mb-md-0">
-                     <img src="images/ticket.svg" class="img-fluid">
+                  <div class="col-10">
+                     <div class="winners p-3 p-md-4 rounded-4 text-center">
+                        <div class="heading mb-4 mb-md-5">
+                           <h3 class="mb-0 display-6">WINNERS</h3>
+                        </div>
+                        <div class="row gap-md-4 justify-content-center">
+                           <div class="col-4 col-md-2 mb-4 mb-md-0">
+                              <img src="images/ticket.svg" class="img-fluid">
+                           </div>
+                           <div class="col-4 col-md-2 mb-4 mb-md-0">
+                              <img src="images/ticket.svg" class="img-fluid">
+                           </div>
+                           <div class="col-4 col-md-2 mb-4 mb-md-0">
+                              <img src="images/ticket.svg" class="img-fluid">
+                           </div>
+                           <div class="col-4 col-md-2 mb-4 mb-md-0">
+                              <img src="images/ticket.svg" class="img-fluid">
+                           </div>
+                           <div class="col-4 col-md-2 mb-4 mb-md-0">
+                              <img src="images/ticket.svg" class="img-fluid">
+                           </div>
+                        </div>
+                     </div>
                   </div>
                </div>
-            </div>
+               
+
             </div>
          <div class="container pt-5">
-            <div class="row mb-3">
+            <div class="row mb-4 mb-md-5">
                <div class="col-md-12">
-                  <div class="heading mb-5 text-center">
-                     <h2 class="mb-0 display-4">KEY FEATURES</h2>
+                  <div class="heading text-center">
+                     <h3 class="mb-0 display-6">KEY FEATURES</h3>
                   </div>
                </div>
             </div>
-            <div class="row g-md-5 align-items-center justify-content-center">
-               <div class="col-11 col-md-6 feature-1 mb-4 mb-md-0">
-                  <div class="feature rounded-3 p-4 p-md-5 position-relative">
-                     <h2 class="fw-bold text-white mb-3">Ticket Purchase</h2>
+            <div class="row align-items-center justify-content-center">
+               <div class="col-11 col-md-4 feature-1 mb-3">
+                  <div class="feature rounded-3 p-3 p-md-4 position-relative">
+                     <h5 class="text-white mb-2 mb-md-3">Ticket Purchase</h5>
                      <ul class="list-feature text-white text-opacity-75 fw-light">
                         <li>Users buy tickets using $S, after ticket is purchased NFT as ticket number is minted to the user.</li>
                         <li>Each ticket costs 10 $S.</li>
@@ -154,24 +156,24 @@
                      </div>
                   </div>
                </div>
-               <div class="col-11 col-md-6 feature-2 mb-4 mb-md-0">
-                  <div class="feature rounded-3 p-4 p-md-5 position-relative">
-                     <h2 class="fw-bold text-white mb-3">Automated Lottery Draws</h2>
+               <div class="col-11 col-md-4 feature-2 mb-3">
+                  <div class="feature rounded-3 p-3 p-md-4 position-relative">
+                     <h5 class="text-white mb-2 mb-md-3">Automated Lottery Draws</h5>
                      <ul class="list-feature text-white text-opacity-75 fw-light">
                         <li>Every 4 hours, tickets are sold.</li>
                         <li>After sales close, a 30-minute period is allotted for drawing winners.</li>
-                        <li>A 1-hour cooling period follows before the next round begins.</li>
+                        <li>1-hour cooling period before next round.</li>
                      </ul>
                      <div class="feature-star position-absolute">
                         <img src="images/features-star.svg">
                      </div>
                   </div>
                </div>
-               <div class="col-11 col-md-6 feature-3 mb-4 mb-md-0">
-                  <div class="feature rounded-3 p-4 p-md-5 position-relative">
-                     <h2 class="fw-bold text-white mb-0 mb-mb-3">Winner Selection</h2>
+               <div class="col-11 col-md-4 feature-3 mb-3">
+                  <div class="feature rounded-3 p-3 p-md-4 position-relative">
+                     <h5 class="text-white mb-0 mb-mb-3">Winner Selection</h5>
                      <small class="text-secondary">(Chainlink VRF Integration)</small>
-                     <ul class="list-feature text-white text-opacity-75 fw-light mt-3 mt-md-0">
+                     <ul class="list-feature text-white text-opacity-75 fw-light mt-2 mt-md-0">
                         <li>10 winners are randomly chosen per round.</li>
                         <li>25% of the total ticket pool is distributed among winners.</li>
                      </ul>
@@ -180,11 +182,11 @@
                      </div>
                   </div>
                </div>
-               <div class="col-11 col-md-6 feature-4 mb-4 mb-md-0">
-                  <div class="feature rounded-3 p-4 p-md-5 position-relative">
-                     <h2 class="fw-bold text-white mb-0 mb-mb-3">Refund System</h2>
+               <div class="col-11 col-md-4 feature-4 mb-3">
+                  <div class="feature rounded-3 p-3 p-md-4 position-relative">
+                     <h5 class="text-white mb-0 mb-mb-3">Refund System</h5>
                      <small class="text-secondary">(Loss Protection)</small>
-                     <ul class="list-feature text-white text-opacity-75 fw-light mt-3 mt-md-0">
+                     <ul class="list-feature text-white text-opacity-75 fw-light mt-2 mt-md-0">
                         <li>75% of ticket price refunded to losing participants.</li>
                         <li>This ensures users don’t lose everything if they don’t win.</li>
                      </ul>
@@ -193,9 +195,9 @@
                      </div>
                   </div>
                </div>
-               <div class="col-11 col-md-6 feature-5 mb-4 mb-md-0">
-                  <div class="feature rounded-3 p-4 p-md-5 position-relative">
-                     <h2 class="fw-bold text-white mb-3">Security & Transparency</h2>
+               <div class="col-11 col-md-4 feature-5 mb-3">
+                  <div class="feature rounded-3 p-3 p-md-4 position-relative">
+                     <h5 class="text-white mb-2 mb-md-3">Security & Transparency</h5>
                      <ul class="list-feature text-white text-opacity-75 fw-light">
                         <li>All transactions and lottery logic are on-chain and verifiable.</li>
                         <li>Funds are securely handled by smart contracts.</li>
@@ -205,9 +207,9 @@
                      </div>
                   </div>
                </div>
-               <div class="col-11 col-md-6 feature-6 mb-4 mb-md-0">
-                  <div class="feature rounded-3 p-4 p-md-5 position-relative">
-                     <h2 class="fw-bold text-white mb-3">Prize Distribution & Fees</h2>
+               <div class="col-11 col-md-4 feature-6 mb-3">
+                  <div class="feature rounded-3 p-3 p-md-4 position-relative">
+                     <h5 class="text-white mb-2 mb-md-3">Prize Distribution & Fees</h5>
                      <ul class="list-feature text-white text-opacity-75 fw-light">
                         <li>Winners must claim rewards via the dApp.</li>
                      </ul>
@@ -226,15 +228,15 @@
                <div class="col-md-6">
                   <a href="#" class="logo d-flex align-items-center text-decoration-none mb-3 mb-md-0">
                      <img src="images/logo.svg" class="me-2"> 
-                     <h3 class="mb-0"><span class="text-white fw-bold">SONIC</span> <span class="fst-italic text-warning">Jackpot</span></h3>
+                     <h5 class="mb-0"><span class="text-white fw-bold">SONIC</span> <span class="fst-italic text-warning">Jackpot</span></h5>
                   </a>
                </div>
                <div class="col-md-6 text-md-end text-white">
                   <small class="me-2 d-block d-md-inline-block mb-2 mb-md-0">Join Our Community:</small>
-                  <a href="#" class="btn btn-outline-light mx-1"><i class="bi bi-discord"></i></a>
-                  <a href="#" class="btn btn-outline-light mx-1"><i class="bi bi-twitter-x"></i></a>
-                  <a href="#" class="btn btn-outline-light mx-1"><i class="bi bi-facebook"></i></a>
-                  <a href="#" class="btn btn-outline-light ms-1"><i class="bi bi-instagram"></i></a>
+                  <a href="#" class="btn btn-sm btn-outline-light mx-1"><i class="bi bi-discord"></i></a>
+                  <a href="#" class="btn btn-sm btn-outline-light mx-1"><i class="bi bi-twitter-x"></i></a>
+                  <a href="#" class="btn btn-sm btn-outline-light mx-1"><i class="bi bi-facebook"></i></a>
+                  <a href="#" class="btn btn-sm btn-outline-light ms-1"><i class="bi bi-instagram"></i></a>
                </div>
             </div>
          </div>
