--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Sonic Jackpot</title>
+      <link rel="icon" type="image/x-icon" href="images/favicon.ico">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -98,6 +99,31 @@
                            <div class="col-auto">
                               <h5 class="fw-light text-white mb-0">$1,00,000.00</h5>
                            </div>
+                        </div>
+                     </div>
+                     <div class="row align-items-center justify-content-between py-3 text-white">
+                        <div class="col-12 mb-4">
+                           <h5>Why Join the Jackpot Sonic ICO?</h5>
+                           <p class="text-warning mb-0">Total Raise Target: <span class="fw-medium">1,000,000 $S</span></p>
+                        </div>
+                        <div class="col-md-4 mb-2 mb-md-3">
+                           <p class="mb-0 fw-light">1 SONIC = <span class="fw-medium">28 $JACK</span></p>
+                        </div>
+                        <div class="col-md-4 mb-2 mb-md-3">
+                           <p class="mb-0 fw-light">Minimum Buy: <span class="fw-medium">100 $S</span></p>
+                        </div>
+                        <div class="col-md-4 mb-2 mb-md-3">
+                           <p class="mb-0 fw-light">No Maximum Buy Limit</p>
+                        </div>
+                        <div class="col-md-4 mb-2 mb-md-3">
+                           <p class="mb-0 fw-light">Duration: <span class="fw-medium">1 Week</span></p>
+                           <small class="text-secondary">(or until the hard cap is reached)</small>
+                        </div>
+                        <div class="col-md-4 mb-2 mb-md-3">
+                           <p class="mb-0 fw-light">Hard Cap: <span class="fw-medium">$750,000</span></p>
+                        </div>
+                        <div class="col-md-4 mb-2 mb-md-3">
+                           <p class="mb-0 fw-light">Soft Cap: <span class="fw-medium">$200,000</span></p>
                         </div>
                      </div>
                      <a href="#" class="btn btn-warning rounded-pill px-4">Participate Now</a>
