--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
          <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                <a href="#" class="logo d-flex align-items-center text-decoration-none">
-                  <img src="images/logo.svg" class="me-2"> 
-                  <h4 class="mb-0"><span class="text-white fw-bold">SONIC</span> <span class="fst-italic text-warning">Jackpot</span></h4>
+                  <img src="images/logo.png" class="me-2"> 
+                  <h4 class="mb-0"><span class="text-white fw-bold">COSMO</span> <span class="fst-italic text-warning">Jackpot</span></h4>
                </a>
                <div class="text-end ms-auto">
                   <button type="button" class="btn btn-warning rounded-pill">Participate</button>
@@ -39,7 +39,7 @@
                </div>
                <div class="col-10 col-md-6">
                   <div class="banner-character mb-3 mb-md-0">
-                     <img src="images/banner-character.svg" class="img-fluid">
+                     <img src="images/banner-character.png" class="img-fluid">
                   </div>
                </div>
                <div class="col-6 col-md-3">
@@ -199,7 +199,7 @@
                   <div class="feature rounded-3 p-3 p-md-4 position-relative">
                      <h5 class="text-white mb-0 mb-mb-3">Winner Selection</h5>
                      <small class="text-secondary">(Chainlink VRF Integration)</small>
-                     <ul class="list-feature text-white text-opacity-75 fw-light mt-2 mt-md-0">
+                     <ul class="list-feature text-white text-opacity-75 fw-light mt-2 mt-md-2">
                         <li>10 winners are randomly chosen per round.</li>
                         <li>25% of the total ticket pool is distributed among winners.</li>
                      </ul>
@@ -212,7 +212,7 @@
                   <div class="feature rounded-3 p-3 p-md-4 position-relative">
                      <h5 class="text-white mb-0 mb-mb-3">Refund System</h5>
                      <small class="text-secondary">(Loss Protection)</small>
-                     <ul class="list-feature text-white text-opacity-75 fw-light mt-2 mt-md-0">
+                     <ul class="list-feature text-white text-opacity-75 fw-light mt-2 mt-md-2">
                         <li>75% of ticket price refunded to losing participants.</li>
                         <li>This ensures users don’t lose everything if they don’t win.</li>
                      </ul>
@@ -253,7 +253,7 @@
             <div class="row align-items-center justify-content-md-between">
                <div class="col-md-6">
                   <a href="#" class="logo d-flex align-items-center text-decoration-none mb-3 mb-md-0">
-                     <img src="images/logo.svg" class="me-2"> 
+                     <img src="images/logo.png" class="me-2"> 
                      <h5 class="mb-0"><span class="text-white fw-bold">SONIC</span> <span class="fst-italic text-warning">Jackpot</span></h5>
                   </a>
                </div>
